--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "pdf-gen"
 version = "0.1.0"
 edition = "2021"
+authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
+description = "A mid-level, opionated tool for generating PDF documents"
+repository = "https://github.com/hamaluik/pdf-gen"
+homepage = "https://github.com/hamaluik/pdf-gen"
+readme = "README.md"
+license = "Apache-2.0"
+keywords = ["pdf"]
+categories = ["encoding", "multimedia::encoding"]
 
 [dependencies]
 pdf-writer = "0.6"
