added hello world example, LICENSE, and README

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "pdf-gen"
 version = "0.1.0"
 edition = "2021"
 authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
-description = "A mid-level, opionated tool for generating PDF documents"
+description = "A mid-level, opionated library for generating PDF documents"
 repository = "https://github.com/hamaluik/pdf-gen"
 homepage = "https://github.com/hamaluik/pdf-gen"
 readme = "README.md"
