--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["encoding", "multimedia::encoding"]
 
 [dependencies]
 pdf-writer = "0.6"
-ttf-parser = "0.15"
+owned_ttf_parser = "0.15"
 chrono = "0.4"
 lipsum = "0.8"
 image = "0.24"
@@ -22,3 +22,4 @@ miniz_oxide = "0.5"
 usvg = "0.22"
 svg2pdf = "0.4"
 derive_more = "0.99"
+id-arena = "2"
