upgrade thiserror and derive_more

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,9 @@ owned_ttf_parser = "0.15"
 chrono = "0.4"
 lipsum = "0.8"
 image = "0.24"
-thiserror = "1"
+thiserror = "2"
 miniz_oxide = "0.5"
 usvg = "0.45"
 svg2pdf = "0.13"
-derive_more = "0.99"
+derive_more = { version = "2", features = ["add", "add_assign", "deref", "deref_mut", "display", "from", "into", "mul_assign", "sum"] }
 id-arena = "2"
